--- a/components.json
+++ b/components.json
@@ -11,6 +11,7 @@
     "prefix": ""
   },
   "aliases": {
+    "data": "@/data",
     "components": "@/components",
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
