--- a/components.json
+++ b/components.json
@@ -16,6 +16,7 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
+    "styles": "@/styles",
     "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
