--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gsap": "^3.13.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "maplibre-gl": "^5.12.0",
     "next": "15.2.4",
     "next-themes": "latest",
     "qrcode": "^1.5.4",
